Refactor .tnt-fab positioning logic
Added `right: 16px;` to `.tnt-components.tnt-fab` for consistent positioning from the right edge. Commented out dynamic `right` property setting based on child index, which previously spaced elements 128px apart horizontally.

--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -69,6 +69,7 @@
     position: fixed;
     bottom: 16px;
     transition: 250ms;
+    right: 16px;
 
     button.tnt-components {
         height: 56px;
@@ -85,10 +86,11 @@ body:has(.tnt-footer) {
     .tnt-components.tnt-fab {
         bottom: calc($tnt-footer-height + 16px);
     }
-
-    @for $i from 1 through 5 {
-        .tnt-components.tnt-fab:nth-child(#{$i}) {
-            right: #{(128 * ($i - 1) + 16)}px;
-        }
-    }
 }
+
+
+//@for $i from 1 through 5 {
+//    .tnt-components.tnt-fab:nth-child(#{$i}) {
+//        right: #{(128 * ($i - 1) + 16)}px;
+//    }
+//}
