Add BackgroundColor parameter to TnTTypeahead component
Introduced a new `BackgroundColor` parameter to the `TnTTypeahead` component in the `TnTTypeahead.razor` file. This parameter is of type `TnTColor` and defaults to `TnTColor.SurfaceContainerHighest`. The Razor markup has been updated to bind this parameter, allowing users to dynamically set the background color of the component.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -22,6 +22,7 @@
                       BindOnInput="true"
                       BindAfter="SearchAsync"
                       Disabled="@Disabled"
+                      BackgroundColor="BackgroundColor"
                       StartIcon="@(new MaterialIcon(MaterialIcon.Search))"
                       @onkeydown="SelectOrShiftFocusAsync"/>
         <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
