Refine textarea and label styling in CSS
Added a new rule to set the width of elements containing a `textarea` to `calc(100% - 16px)`, ensuring they fit better within their containers. Removed a rule that applied a large label style to elements without a checkbox input, simplifying the styling logic. Adjusted the top position of the `.tnt-label` within elements containing a `textarea` from `16px` to `8px` for improved alignment.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -27,6 +27,10 @@
         -webkit-background-clip: text;
     }
 
+    &:has(textarea) {
+        width: calc(100% - 16px);
+    }
+
     input, select, textarea {
         appearance: none;
         border: none;
@@ -189,14 +193,6 @@
                 }
             }
         }
-
-
-
-        &:not(:has(input[type=checkbox])) {
-            .tnt-label {
-                @extend .tnt-label-large;
-            }
-        }
     }
 
     &.invalid.modified {
@@ -235,7 +231,7 @@
         padding-top: 4px;
 
         .tnt-label {
-            top: 16px;
+            top: 8px;
         }
 
         &.tnt-filled {
