--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -17,6 +17,7 @@
 
     .tnt-dialog-header {
         position: relative;
+        min-height: 16px;
 
         h2 {
             @extend .tnt-headline-small;
@@ -24,7 +25,7 @@
         }
 
         button.tnt-components {
-            position: absolute;
+            float: right;
             right: 0;
             top: -2rem;
             background-color: transparent;
