Enhance component styling and clean up dialog CSS
- Added conditional check in TnTInputBase.cs to include "style" attribute from AdditionalAttributes for dynamic custom styles.
- Added BackgroundColor attribute to TnTInputDateTime in TnTScheduler.razor for customizable background color.
- Modified _dialog.scss to set h2 display to inline, removed right: 0; from button.tnt-components, and cleaned up obsolete CSS code.

--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -9,7 +9,7 @@
                 TODAY
             </TnTButton>
             <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.ChevronRight))" OnClickCallback="NextPage" class="next-button" />
-            <TnTInputDateTime @bind-Value="_displayDate" Label="Date Picker" BindAfter="@((DateOnly? date) => UpdateDate(date))" />
+            <TnTInputDateTime @bind-Value="_displayDate" BackgroundColor="@BackgroundColor" Label="Date Picker" BindAfter="@((DateOnly? date) => UpdateDate(date))" />
         </div>
     }
     <CascadingValue Value="this" IsFixed="true">
