--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -22,11 +22,11 @@
         h2 {
             @extend .tnt-headline-small;
             text-align: center;
+            display: inline;
         }
 
         button.tnt-components {
             float: right;
-            right: 0;
             top: -2rem;
             background-color: transparent;
             color: inherit;
@@ -44,45 +44,6 @@
         transform: scale(0);
     }
 }
-
-//div.tnt-dialog {
-//    position: fixed;
-//    width: 100%;
-//    height: 100%;
-//    z-index: 2000;
-//    top: 0;
-//    left: 0;
-//    display: flex;
-//    align-items: center;
-//    justify-content: center;
-
-
-//    div.tnt-dialog-container {
-//        max-width: 90%;
-//        min-height: 20%;
-//        max-height: 75%;
-//        min-width: 25%;
-//        overflow-y: auto;
-//        overflow-x: clip;
-//        z-index: 2001;
-//        transition: 200ms ease-in-out;
-//        animation: dialogGrow 100ms ease-in-out forwards;
-
-//        .tnt-dialog-header {
-//            padding: 1rem;
-
-//            & > h2 {
-//                display: inline;
-//            }
-
-//            & > button {
-//                float: right;
-//                margin: 0;
-//                padding: 0;
-//            }
-//        }
-//    }
-//}
 
 @keyframes dialogGrow {
     0% {
