--- a/TnTComponents/Styles/TnTComponents/_toast.scss
+++ b/TnTComponents/Styles/TnTComponents/_toast.scss
@@ -1,6 +1,6 @@
 ﻿div.tnt-components.tnt-toast-container {
     position: fixed;
-    bottom: 5rem;
+    bottom: 80px;
     right: 32px;
     width: 320px;
     z-index: 1001;
