--- a/TnTComponents/Styles/TnTComponents/_chips.scss
+++ b/TnTComponents/Styles/TnTComponents/_chips.scss
@@ -1,15 +1,15 @@
 ﻿.tnt-components.tnt-chip {
-    height: 2rem;
-    border-radius: 0.5rem;
+    height: 32px;
+    border-radius: 8px;
     border: 1px solid $tnt-color-outline;
     box-sizing: border-box;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    padding: 0 0.75rem;
+    padding: 0 12px;
     position: relative;
     vertical-align: middle;
-    margin: 0.25rem;
+    margin: 4px;
     @extend .tnt-label-large;
 
     .tnt-icon {
@@ -21,7 +21,7 @@
         padding-left: 0;
 
         .tnt-start-icon {
-            padding: 0 0.5rem;
+            padding: 0 8px;
         }
     }
 
@@ -29,7 +29,7 @@
         padding-right: 0;
 
         .tnt-chip-close-button {
-            margin: 0 0.5rem;
+            margin: 0 8px;
             min-width: unset;
             min-height: unset;
             width: unset;
@@ -39,7 +39,7 @@
             .tnt-icon {
                 margin: 0;
                 padding: 0;
-                font-size: 1.125rem;
+                font-size: 18px;
             }
         }
     }
@@ -61,65 +61,3 @@
         }
     }
 }
-//.tnt-components.tnt-chip {
-//    min-height: 1.5rem;
-//    background-color: transparent;
-//    border: 1px solid $tnt-color-outline;
-//    color: var(--inactive-text-color);
-//    user-select: none;
-//    display: inline-flex;
-//    align-items: center;
-//    padding: 0 1rem;
-//    cursor: pointer;
-//    position: relative;
-//    margin: 0.5rem 0.1rem;
-//    vertical-align: middle;
-//    @extend .tnt-label-large;
-//    input {
-//        position: absolute;
-//    }
-//    input, .tnt-icon {
-//        cursor: inherit;
-//    }
-//    .tnt-icon {
-//        color: inherit;
-//        font-size: 18px;
-//    }
-//    &:has(.tnt-icon.tnt-start) {
-//        padding: 0 0.75rem 0 0.33rem;
-//        .tnt-icon.tnt-start {
-//            padding: 0 0.33rem 0 0;
-//        }
-//    }
-//    input {
-//        appearance: none;
-//    }
-//    &:has(input:checked) {
-//        background-color: var(--active-color);
-//        color: var(--active-text-color);
-//        border: none;
-//    }
-//    &.tnt-input-chip {
-//        padding-right: 0.5rem;
-//        justify-content: space-evenly;
-//        background-color: var(--bg-color);
-//        color: var(--text-color);
-//        border: none;
-//        min-width: 2rem;
-//        button.tnt-components {
-//            padding: 0;
-//            margin: 0 0 0 0.5rem;
-//            min-height: revert;
-//            min-width: revert;
-//            width: 1rem;
-//            height: 1rem;
-//            float: right;
-//            font-size: 12px;
-//            color: inherit;
-//            .tnt-icon {
-//                font-size: inherit;
-//                padding: 0;
-//            }
-//        }
-//    }
-//}
