--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -168,7 +168,7 @@
 
             .tnt-label {
                 transform-origin: left;
-                transform: translateY(-6rem);
+                transform: translateY(-96px);
             }
         }
     }
@@ -318,11 +318,11 @@
 
         &.tnt-switch {
             .tnt-checkbox {
-                width: 2.75rem;
+                width: 44px;
                 height: 24px;
                 border: 2px solid $tnt-color-outline;
                 background-color: $tnt-color-surface-container-highest;
-                border-radius: 8rem;
+                border-radius: 128px;
                 box-sizing: border-box;
 
                 &:before {
@@ -349,7 +349,7 @@
             position: relative;
             background-color: transparent !important;
             transform: none;
-            margin-left: 3rem;
+            margin-left: 48px;
         }
 
 
