--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,13 +1,13 @@
 ﻿.tnt-scheduler {
     overflow-x: auto;
-    padding: 0.5rem;
-    margin: 0.5rem;
+    padding: 8px;
+    margin: 8px;
 
     .date-controls {
         display: flex;
 
         .today-button {
-            padding: 0 1rem;
+            padding: 0 16px;
         }
     }
 
@@ -30,10 +30,10 @@
                     background-color: $tnt-color-primary;
                     color: $tnt-color-on-primary;
                     border-radius: 100%;
-                    width: 1rem;
-                    height: 1rem;
+                    width: 16px;
+                    height: 16px;
                     aspect-ratio: 1/1;
-                    padding: 0.1rem;
+                    padding: 0.16px;
                     vertical-align: middle;
                     text-align: center;
                 }
@@ -76,7 +76,7 @@
             &.tnt-time-slot {
                 min-height: 1px;
                 text-align: right;
-                padding-right: 0.5rem;
+                padding-right: 8px;
                 user-select: none;
                 -webkit-user-select: none;
             }
@@ -86,9 +86,9 @@
                 color: var(--foreground-color);
                 display: inline;
                 border-radius: 12px;
-                padding: 0.25rem;
+                padding: 4px;
                 box-sizing: border-box;
-                margin: 0.1rem;
+                margin: 0.16px;
                 user-select: none;
                 text-overflow: clip;
                 overflow: hidden;
