--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -26,10 +26,10 @@
         width: -webkit-fit-content;
         width: -moz-fit-content;
         width: fit-content;
-        padding: 0.25rem;
+        padding: 4px;
         max-height: 50vh;
         overflow: auto;
-        margin: 0.25rem 0.25rem 1rem 0.25rem;
+        margin: 4px 4px 16px 4px;
         z-index: 10;
         position: absolute;
         background-color: $tnt-color-surface-variant;
@@ -44,7 +44,7 @@
                 list-style: none;
                 border-top: 1px solid $tnt-color-outline;
                 cursor: pointer;
-                padding: 0.5rem;
+                padding: 8px;
 
                 &.tnt-focused, span:hover {
                     background-color: color-mix(in srgb, $tnt-color-surface-tint 20%, transparent);
@@ -52,13 +52,13 @@
 
                 span {
                     transition: 200ms;
-                    margin: 0.25rem;
-                    padding: 0.5rem 1rem;
+                    margin: 4px;
+                    padding: 8px 16px;
                 }
             }
 
             li:first-child {
-                margin-top: 0.5rem;
+                margin-top: 8px;
                 border-top: none;
             }
         }
