Enhance hover effect for better UI responsiveness
Added `&:hover` selector to existing `&.tnt-focused, span:hover` rule to change background color when the element is hovered over. This improves the user interface by providing a more interactive experience.

--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -46,7 +46,7 @@
                 cursor: pointer;
                 padding: 8px;
 
-                &.tnt-focused, span:hover {
+                &.tnt-focused, span:hover, &:hover {
                     background-color: color-mix(in srgb, $tnt-color-surface-tint 20%, transparent);
                 }
 
