--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -19,12 +19,17 @@
     input:-webkit-autofill,
     input:-webkit-autofill:hover,
     input:-webkit-autofill:focus,
-    input:-webkit-autofill:active,
+    input:-webkit-autofill,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
     select:-webkit-autofill,
     select:-webkit-autofill:hover,
-    select:-webkit-autofill:focus,
-    select:-webkit-autofill:active {
+    select:-webkit-autofill:focus {
         -webkit-background-clip: text;
+        -webkit-text-fill-color: $tnt-color-on-surface;
+        -webkit-box-shadow: 0 0 0 0 transparent inset;
+        transition: background-color 5000s ease-in-out 0s;
     }
 
     &:has(textarea) {
