--- a/LiveTest/LiveTest.Client/Components/ImageButtons.razor
+++ b/LiveTest/LiveTest.Client/Components/ImageButtons.razor
@@ -2,51 +2,51 @@
 <TnTRow>
     <TnTColumn S="12">
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
             Filled
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             Outlined
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             Text
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Elevation="0">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Elevation="0">
             Elevation 0
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Elevation="2">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Elevation="2">
             Elevation 2
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Elevation="5">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Elevation="5">
             Elevation 5
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Elevation="10">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Elevation="10">
             Elevation 10
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
             CornerRadius 0
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(10)">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(10)">
             CornerRadius 10
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" Disabled="true">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" Disabled="true">
             Disabled
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TintColor="TnTColor.Secondary">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TintColor="TnTColor.Secondary">
             Colored
         </TnTImageButton>
 
-        <TnTImageButton Icon="@(new MaterialIcon(MaterialIcon.GppGood))" OnClickCallback="@OnClick" BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
+        <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.GppGood })" OnClickCallback="@OnClick" BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
             Obscure Radius
         </TnTImageButton>
     </TnTColumn>
