--- a/LiveTest/LiveTest.Client/Pages/Chips.razor
+++ b/LiveTest/LiveTest.Client/Pages/Chips.razor
@@ -4,9 +4,9 @@
 
 
 <TnTComponents.TnTChip Label="Chip" @bind-Value="_a" BindAfter="Checked" />
-<TnTComponents.TnTChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))" Label="Chip" BindAfter="Checked" @bind-Value="_b" />
+<TnTComponents.TnTChip StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.GridOn })" Label="Chip" BindAfter="Checked" @bind-Value="_b" />
 <TnTComponents.TnTChip Label="Chip" CloseButtonClicked="@Closed" @bind-Value="_c" BindAfter="Checked" />
-<TnTComponents.TnTChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))" Label="Chip" CloseButtonClicked="@Closed" BindAfter="Checked" @bind-Value="_d" />
+<TnTComponents.TnTChip StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.GridOn })" Label="Chip" CloseButtonClicked="@Closed" BindAfter="Checked" @bind-Value="_d" />
 
 
 @code {
