--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -9,15 +9,15 @@
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea StartIcon="@(new MaterialIcon(MaterialIcon.Gif))" @bind-Value="@_model.S" />
+        <TnTInputTextArea StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.Gif })" @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="@(new MaterialIcon(MaterialIcon.Group))" />
+        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="@(new MaterialIcon{ Icon = MaterialIcon.Group })" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea StartIcon="@(new MaterialIcon(MaterialIcon.Gif))" @bind-Value="@_model.S" EndIcon="@(new MaterialIcon(MaterialIcon.Group))" />
+        <TnTInputTextArea StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.Gif })" @bind-Value="@_model.S" EndIcon="@(new MaterialIcon{ Icon = MaterialIcon.Group })" />
     </TnTLabel>
 
 </TnTForm>
@@ -30,15 +30,15 @@
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea StartIcon="@(new MaterialIcon(MaterialIcon.Gif))" @bind-Value="@_model.S" />
+        <TnTInputTextArea StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.Gif })" @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="@(new MaterialIcon(MaterialIcon.Group))" />
+        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="@(new MaterialIcon{ Icon = MaterialIcon.Group })" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputTextArea StartIcon="@(new MaterialIcon(MaterialIcon.Gif))" @bind-Value="@_model.S" EndIcon="@(new MaterialIcon(MaterialIcon.Group))" />
+        <TnTInputTextArea StartIcon="@(new MaterialIcon{ Icon = MaterialIcon.Gif })" @bind-Value="@_model.S" EndIcon="@(new MaterialIcon{ Icon = MaterialIcon.Group })" />
     </TnTLabel>
 
 </TnTForm>
