Refactor visibility and update TnTScheduler properties
Updated icon in MainLayout.razor. Changed method visibility from public to internal in several files for better encapsulation. Refactored TnTScheduler component to streamline properties and methods, replacing DisplayedDate with Date. Made minor UI adjustments in _scheduler.scss for better alignment.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -52,7 +52,7 @@
         <TnTSideNavLink Label="TabView" href="/tabview" />
         <TnTSideNavLink Label="Toast" href="/toast" />
         <TnTSideNavLink Label="Typeahead" href="/typeahead" />
-        <TnTSideNavLink Label="Virtualize" href="/InfiniteScroll" Icon="@(new MaterialIcon{ Icon = MaterialIcon.InfoOutline })" />
+        <TnTSideNavLink Label="Virtualize" href="/InfiniteScroll" Icon="@(new MaterialIcon{ Icon = MaterialIcon.Info })" />
 
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon{ Icon = MaterialIcon.Home })" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
