--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -5,6 +5,7 @@
 
     .date-controls {
         display: flex;
+        align-items: center;
 
         .today-button {
             padding: 0 16px;
