Refactor TnTScheduler and update scheduler styles
Refactored `GoToToday`, `NextPage`, and `PreviousPage` methods in `TnTScheduler<TEventType>` to remove `async` keyword and return `Task` directly. Added `AddFilled()` method to `ElementClass` property. Modified `UpdateDate` to set `Date` before `StateHasChanged()`.

Updated `.tnt-scheduler` class in `_scheduler.scss` to include `box-sizing: border-box` and extend `.tnt-border-radius-2` for improved styling.

--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -2,6 +2,8 @@
     overflow-x: auto;
     padding: 8px;
     margin: 8px;
+    box-sizing:border-box;
+    @extend .tnt-border-radius-2;
 
     .date-controls {
         display: flex;
